--- a/public/style.css
+++ b/public/style.css
@@ -38,5 +38,11 @@ form div {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+}
 
+.categories {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
