add filter functionality to order history view, changes title of website in header

--- a/public/style.css
+++ b/public/style.css
@@ -67,3 +67,8 @@ form div {
 .item-info span{
   padding: 10px
 }
+
+#filter-by-status-radios{
+  display: flex;
+  justify-content: space-around;
+}
