--- a/public/style.css
+++ b/public/style.css
@@ -113,3 +113,37 @@ form div {
   flex-wrap: wrap;
   justify-content: space-between;
 }
+
+.search-acc-cart {
+  display: flex !important;
+}
+.search-bar-form {
+  position: absolute !important;
+  left: 51em !important;
+  margin-top: 21px;
+}
+
+.search-bar-icon {
+  display: flex !important;
+  margin-top: 6rem !important;
+  margin-top: -1em !important;
+}
+
+.blue.search.icon.large {
+  margin-top: 16px;
+}
+
+.search1 {
+  margin-top: 28px;
+}
+
+.remove {
+  margin-top: 20px !important;
+}
+
+
+
+
+
+
+}
