changed fontsand font weight

--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,9 @@
 body {
-  font-family: 'Bree Serif', serif;
-  letter-spacing: 2px;
+  /* font-family: 'Bree Serif', serif; */
+  /* font-family: 'Abel', sans-serif; */
+  font-size: 18px;
+  font-family: 'Khula', sans-serif;
+  /* letter-spacing: 2px; */
 }
 
 a {
@@ -14,6 +17,7 @@ label {
 nav a {
   display: inline-block;
   margin: 1em;
+  font-family: 'Open Sans', sans-serif;
 }
 
 form div {
@@ -99,7 +103,7 @@ form div {
   padding: 10px
 }
 .ui.horizontal.segments {
-  display: inline-flex
+  display: inline-flex;
 }
 #filter-by-status-radios{
   display: flex;
@@ -171,3 +175,11 @@ form div {
     font-size: 50px;
 }
 
+
+#all-prod-price {
+  color: #1e70bf;
+}
+
+.ui.basic.segment {
+  font-family: 'Open Sans', sans-serif;
+}
